# PastaTube

./: CMakeLists.txt
plugin/: CMakeLists.txt
plugin/include/failingplugin/: CustomLookAndFeel.h  PluginEditor.h  PluginProcessor.h
plugin/include/pastaplugin/: CustomLookAndFeel.h  PluginEditor.h  PluginProcessor.h
plugin/source/: CustomLookAndFeel.cpp  PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
